# krarkulator

./: Makefile  main.py  pyproject.toml
docs/: requirements.md
krarkulator/: common.py  engine.py  tmp
krarkulator/cards/: card.py  enhancers.py  krark.py  rite.py
