[project]
name = "krarkulator"
version = "0.1.0"
description = ""
authors = [{ name = "tomaz", email = "tomaz.azinhal+vgi@mobilityhouse.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["structlog (>=25.4.0,<26.0.0)", "black (>=25.1.0,<26.0.0)", "isort (>=6.0.1,<7.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
